tests/ivg/invalid/invalid_define_resolution.ivg
format IVG-3
define image i [] resolution:0
